--- a/src/main/resources/view/rental.fxml
+++ b/src/main/resources/view/rental.fxml
@@ -2,23 +2,22 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
 <?import javafx.geometry.Insets?>
+
 <BorderPane xmlns="http://javafx.com/javafx/17"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="lk.ijse.controller.rental.RentalController">
 
-    <!-- ===================== TOP ===================== -->
+    <!-- TOP TOOLBAR -->
     <top>
         <ToolBar>
             <Button text="Save Rental" onAction="#btnSaveOnAction"/>
             <Button text="Update Rental" onAction="#btnUpdateOnAction"/>
             <Button text="Process Return" onAction="#btnReturnOnAction"/>
-<!--            <Button text="Delete Rental" onAction="#btnDeleteOnAction"/>-->
         </ToolBar>
     </top>
 
-    <!-- ===================== CENTER (TABLE) ===================== -->
+    <!-- CENTER TABLE -->
     <center>
         <TableView fx:id="tblRentals">
             <columns>
@@ -26,11 +25,13 @@
                 <TableColumn fx:id="colCustomerId" text="Customer ID" prefWidth="120"/>
                 <TableColumn fx:id="colEquipmentId" text="Equipment ID" prefWidth="120"/>
                 <TableColumn fx:id="colStatus" text="Status" prefWidth="100"/>
+                <TableColumn fx:id="colPaymentStatus" text="Payment Status" prefWidth="120"/>
+                <TableColumn fx:id="colFinalAmount" text="Final Amount" prefWidth="120"/>
             </columns>
         </TableView>
     </center>
 
-    <!-- ===================== BOTTOM (FORM) ===================== -->
+    <!-- BOTTOM FORM -->
     <bottom>
         <GridPane hgap="10" vgap="10">
             <padding>
@@ -40,43 +41,35 @@
             <Label text="Rental ID"/>
             <TextField fx:id="txtRentalId" GridPane.columnIndex="1"/>
 
-            <Label text="Branch ID" GridPane.rowIndex="1"/>
-            <TextField fx:id="txtBranchId" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+            <Label text="Customer ID" GridPane.rowIndex="1"/>
+            <TextField fx:id="txtCustomerId" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
 
-            <Label text="Customer ID" GridPane.rowIndex="2"/>
-            <TextField fx:id="txtCustomerId" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+            <Label text="Equipment ID" GridPane.rowIndex="2"/>
+            <TextField fx:id="txtEquipmentId" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
 
-            <Label text="Equipment ID" GridPane.rowIndex="3"/>
-            <TextField fx:id="txtEquipmentId" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
+            <Label text="Rented From" GridPane.rowIndex="3"/>
+            <DatePicker fx:id="dpRentedFrom" GridPane.rowIndex="3" GridPane.columnIndex="1"/>
 
-            <Label text="Rented From" GridPane.rowIndex="4"/>
-            <DatePicker fx:id="dpRentedFrom" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
+            <Label text="Expected Return" GridPane.rowIndex="4"/>
+            <DatePicker fx:id="dpExpectedReturn" GridPane.rowIndex="4" GridPane.columnIndex="1"/>
 
-            <Label text="Expected Return" GridPane.rowIndex="5"/>
-            <DatePicker fx:id="dpExpectedReturn" GridPane.rowIndex="5" GridPane.columnIndex="1"/>
+            <Label text="Actual Return" GridPane.rowIndex="5"/>
+            <DatePicker fx:id="dpActualReturn" GridPane.rowIndex="5" GridPane.columnIndex="1"/>
 
-            <Label text="Actual Return" GridPane.rowIndex="6"/>
-            <DatePicker fx:id="dpActualReturn" GridPane.rowIndex="6" GridPane.columnIndex="1"/>
+            <Label text="Daily Rate" GridPane.rowIndex="6"/>
+            <TextField fx:id="txtDailyRate" GridPane.rowIndex="6" GridPane.columnIndex="1"/>
 
-            <Label text="Daily Rate" GridPane.rowIndex="7"/>
-            <TextField fx:id="txtDailyRate" GridPane.rowIndex="7" GridPane.columnIndex="1"/>
+            <Label text="Deposit" GridPane.rowIndex="7"/>
+            <TextField fx:id="txtDeposit" GridPane.rowIndex="7" GridPane.columnIndex="1"/>
 
-            <Label text="Deposit" GridPane.rowIndex="8"/>
-            <TextField fx:id="txtDeposit" GridPane.rowIndex="8" GridPane.columnIndex="1"/>
+            <Label text="Damage Charge" GridPane.rowIndex="8"/>
+            <TextField fx:id="txtDamageCharge" GridPane.rowIndex="8" GridPane.columnIndex="1"/>
 
-            <Label text="Damage Charge" GridPane.rowIndex="9"/>
-            <TextField fx:id="txtDamageCharge" GridPane.rowIndex="9" GridPane.columnIndex="1"/>
+            <Label text="Payment Status" GridPane.rowIndex="9"/>
+            <ComboBox fx:id="cmbPaymentStatus" GridPane.rowIndex="9" GridPane.columnIndex="1"/>
 
-            <Label text="Payment Status" GridPane.rowIndex="10"/>
-            <ComboBox fx:id="cmbPaymentStatus"
-                      GridPane.rowIndex="10"
-                      GridPane.columnIndex="1"/>
-
-            <Label text="Rental Status" GridPane.rowIndex="11"/>
-            <ComboBox fx:id="cmbStatus"
-                      GridPane.rowIndex="11"
-                      GridPane.columnIndex="1"/>
-
+            <Label text="Rental Status" GridPane.rowIndex="10"/>
+            <ComboBox fx:id="cmbStatus" GridPane.rowIndex="10" GridPane.columnIndex="1"/>
         </GridPane>
     </bottom>
 
